# chat-ui

./: .dockerenv.example  .envrc  .eslintrc.json  .gitignore  Dockerfile  Makefile  README.md  SECURITY.md  docker-compose.yml  entrypoint.sh  mkdocs.yml  package-lock.json  package.json  pyproject.toml  run_collector.sh  run_llama_local.sh
.github/: CONTRIBUTING.md
.github/workflows/: dependency_review.yml  mypy.yml  pylint.yml  pytest.yml
chat_ui/: __init__.py  __main__.py  backgroundpoller.py  client.py  config.py  db.py  enums.py  forms.py  healthcheck.py  logs.py  models.py  utils.py  websocket_handlers.py
chat_ui/css/: css.css
chat_ui/html/: index.html
chat_ui/js/: chatui.js
chat_ui/tools/: client.py
docs/: chat_ui.config.md  chat_ui.md
tests/: __init__.py  test_admin.py  test_analysis_job.py  test_appstate.py  test_background_poller.py  test_config.py  test_db.py  test_html.py  test_html_wrangling.py  test_jobs.py  test_models.py  test_nothing.py  test_sessions.py  test_statics.py  test_websocket.py
