[tool.poetry]
name = "chat-ui"
version = "0.1.0"
description = ""
authors = [
    "James Hodgkinson <james@terminaloutcomes.com>",
]
readme = "README.md"
packages = [
    { include = "chat_ui" },
]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.111.0"
pydantic = "^2.7.1"
uvicorn = "^0.29.0"
click = "^8.1.7"
fortune-python = "^1.1.1"
itsdangerous = "^2.2.0"
python-multipart = "^0.0.9"

[tool.poetry.group.dev.dependencies]
mypy = "^1.10.0"
black = "^24.4.2"
ruff = "^0.4.5"
pytest = "^8.2.0"
httpx = "^0.27.0"

[tool.poetry.scripts]
chat-ui = "chat_ui.__main__:main"

[tool.ruff]
line-length = 120

[tool.mypy]
plugins = "pydantic.mypy"

[build-system]
requires = [
    "poetry-core",
]
build-backend = "poetry.core.masonry.api"

[project]
name = "chat-ui"
description = ""
version = "0.1.0"
readme = "README.md"
authors = [
    { name = "James Hodgkinson", email = "james@terminaloutcomes.com" },
]
