[tool.poetry]
name = "chat-ui"
version = "0.1.0"
description = ""
authors = [
    "James Hodgkinson <james@terminaloutcomes.com>",
]
readme = "README.md"
packages = [
    { include = "chat_ui" },
]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.112.0"
pydantic = "^2.8.2"
uvicorn = "^0.30.5"
click = "^8.1.7"
fortune-python = "^1.1.1"
itsdangerous = "^2.2.0"
python-multipart = "^0.0.9"

[tool.poetry.group.dev.dependencies]
mypy = "^1.11.1"
black = "^24.8.0"
ruff = "^0.5.7"
pytest = "^8.3.2"
httpx = "^0.27.0"

[tool.poetry.scripts]
chat-ui = "chat_ui.__main__:main"

[tool.ruff]
line-length = 120

[tool.mypy]
plugins = "pydantic.mypy"

[build-system]
requires = [
    "poetry-core",
]
build-backend = "poetry.core.masonry.api"

[project]
name = "chat-ui"
description = ""
version = "0.1.0"
readme = "README.md"
authors = [
    { name = "James Hodgkinson", email = "james@terminaloutcomes.com" },
]
