[tool.poetry]
name = "chat-ui"
version = "0.2.0"
description = "A Chat UI for interacting with an LLM."
authors = ["James Hodgkinson <james@terminaloutcomes.com>"]
readme = "README.md"
packages = [{ include = "chat_ui" }]

[tool.poetry.dependencies]

python = "^3.10"
fastapi = "^0.115.0"
pydantic = "^2.9.2"
uvicorn = "^0.32.0"
click = "^8.1.6"
fortune-python = "^1.1.1"
itsdangerous = "^2.1.2"
python-multipart = "^0.0.12"
pydantic-settings = "^2.6.0"
structlog = "^24.1.0"
loguru = "^0.7.2"
sqlalchemy = "^2.0.36"
websocket = "^0.2.1"
websockets = "^13.1"
aiohttp = "^3.10.10"
requests = "^2.31.0"
openai = "^1.51.2"
sqlmodel = "^0.0.22"
cmarkgfm = "^2024.1.14"
sqlalchemy-utils = "^0.41.2"

opentelemetry-exporter-otlp = "1.24.0"
opentelemetry-distro = "0.45b0"
opentelemetry-instrumentation-fastapi = "0.45b0"
# because of issues with installing the package automagically https://github.com/open-telemetry/opentelemetry-python-contrib/issues/2053#issuecomment-1928485674
opentelemetry-instrumentation-aiohttp-server = { git = "https://github.com/open-telemetry/opentelemetry-python-contrib.git", rev = "v0.45b0", subdirectory = "instrumentation/opentelemetry-instrumentation-aiohttp-server" }
opentelemetry-instrumentation-sqlalchemy = "0.45b0"
opentelemetry-instrumentation-requests = "0.45b0"
opentelemetry-instrumentation-httpx = "0.45b0"

[tool.poetry.group.dev.dependencies]
mypy = "^1.12.0"
black = "^24.10.0"
ruff = "^0.6.9"
pytest = "^8.0.0"
httpx = "^0.27.2"
mkdocs = { version = "^1.5.3", extras = ["python"] }
mkdocs-material = "^9.5.42"
markdown-mdantic = "^2.1.0"
types-requests = "^2.32.0.20241016"
pytest-cov = "^5.0.0"
codespell = "^2.2.6"
pytest-asyncio = "^0.24.0"


[tool.poetry.group.llama.dependencies]
llama-cpp-python = { extras = ["server"], version = "^0.3.1" }

[tool.poetry.scripts]
chat-ui = "chat_ui.__main__:main"
chat-ui-tool = "chat_ui.tools.client:cli"

[tool.ruff]
line-length = 120

[tool.mypy]
plugins = "pydantic.mypy"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[project]
name = "chat-ui"
description = ""
version = "0.1.0"
readme = "README.md"
authors = [{ name = "James Hodgkinson", email = "james@terminaloutcomes.com" }]

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"
